# ProtoPNet

./: .gitignore  EVALUATE_AND_PLOTTING.md  Taskfile.yml  VALIDATION_PIPELINE.md  jobscript.sh  prepare_data.py  pyproject.toml  requirements.txt  validate_prototypes.py
ppnet/: alignment_analysis.py  find_nearest.py  global_analysis.py  local_analysis.py  plot_prototype_metrics.py  prune.py  push.py  train_and_test.py
scripts/: jobscript_work3.sh  setup_uv_and_taskfile.sh  setup_venv_work3.sh  validate_work3.sh
validation_results/200push/: per_proto_hist.json  per_proto_max_freq.csv
validation_results/quick_test/: per_proto_frac_same.csv  per_proto_hist.json  per_proto_max_freq.csv
validation_results/test/: per_proto_frac_same.csv  per_proto_hist.json  per_proto_max_freq.csv
